--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -1,5 +1,5 @@
 @import "mixins/mixins_shadows";
-// @import "mixins/mixins_spacing";
+@import "mixins/mixins_spacing";
 @import "mixins/mixins_a11y";
 @import "mixins/mixins_card";
 @import "mixins/mixins_buttons";
