refactor: rename spacing variables
BREAKING CHANGE: The spacing variables are renamed. Leading `lyne-`
prefix is removed

--- a/src/global/mixins/mixins_card.scss
+++ b/src/global/mixins/mixins_card.scss
@@ -68,9 +68,9 @@
 // Card sizing
 @mixin card--xs {
   --card-padding-top: #{pxToRem(var(--spacing-fixed-3x))};
-  --card-padding-right: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
+  --card-padding-right: #{pxToRem(var(--spacing-responsive-xxs))};
   --card-padding-bottom: #{pxToRem(var(--spacing-fixed-3))};
-  --card-padding-left: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
+  --card-padding-left: #{pxToRem(var(--spacing-responsive-xxs))};
   // @include spacing-responsive-xxs('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-left');
   // --card-padding-top: #{pxToRem(var(--spacing-fixed-3x))};
@@ -78,10 +78,10 @@
 }
 
 @mixin card--s {
-  --card-padding-top: #{pxToRem(var(--lyne-spacing-responsive-xxxs))};
-  --card-padding-right: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
-  --card-padding-bottom: #{pxToRem(var(--lyne-spacing-responsive-xxxs))};
-  --card-padding-left: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
+  --card-padding-top: #{pxToRem(var(--spacing-responsive-xxxs))};
+  --card-padding-right: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-bottom: #{pxToRem(var(--spacing-responsive-xxxs))};
+  --card-padding-left: #{pxToRem(var(--spacing-responsive-xxs))};
   // @include spacing-responsive-xxxs('--card-padding-top');
   // @include spacing-responsive-xxs('--card-padding-right');
   // @include spacing-responsive-xxxs('--card-padding-bottom');
@@ -90,9 +90,9 @@
 
 @mixin card--m {
   --card-padding-top: #{pxToRem(var(--spacing-fixed-4x))};
-  --card-padding-right: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
+  --card-padding-right: #{pxToRem(var(--spacing-responsive-xxs))};
   --card-padding-bottom: #{pxToRem(var(--spacing-fixed-4x))};
-  --card-padding-left: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
+  --card-padding-left: #{pxToRem(var(--spacing-responsive-xxs))};
   // @include spacing-responsive-xxs('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-left');
   // --card-padding-top: #{pxToRem(var(--spacing-fixed-4x))};
@@ -101,9 +101,9 @@
 
 @mixin card--m--tall {
   --card-padding-top: #{pxToRem(var(--spacing-fixed-6x))};
-  --card-padding-right: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
+  --card-padding-right: #{pxToRem(var(--spacing-responsive-xxs))};
   --card-padding-bottom: #{pxToRem(var(--spacing-fixed-4x))};
-  --card-padding-left: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
+  --card-padding-left: #{pxToRem(var(--spacing-responsive-xxs))};
   // @include spacing-responsive-xxs('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-left');
   // --card-padding-top: #{pxToRem(var(--spacing-fixed-6x))};
@@ -111,10 +111,10 @@
 }
 
 @mixin card--l {
-  --card-padding-top: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
-  --card-padding-right: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
-  --card-padding-bottom: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
-  --card-padding-left: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
+  --card-padding-top: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-right: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-bottom: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-left: #{pxToRem(var(--spacing-responsive-xxs))};
   // @include spacing-responsive-xxs('--card-padding-top');
   // @include spacing-responsive-xxs('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-bottom');
@@ -123,9 +123,9 @@
 
 @mixin card--l--tall  {
   --card-padding-top: #{pxToRem(var(--spacing-fixed-6x))};
-  --card-padding-right: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
-  --card-padding-bottom: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
-  --card-padding-left: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
+  --card-padding-right: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-bottom: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-left: #{pxToRem(var(--spacing-responsive-xxs))};
   // @include spacing-responsive-xxs('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-bottom');
   // @include spacing-responsive-xxs('--card-padding-left');
@@ -133,10 +133,10 @@
 }
 
 @mixin card--xl {
-  --card-padding-top: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
-  --card-padding-right: #{pxToRem(var(--lyne-spacing-responsive-s))};
-  --card-padding-bottom: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
-  --card-padding-left: #{pxToRem(var(--lyne-spacing-responsive-s))};
+  --card-padding-top: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-right: #{pxToRem(var(--spacing-responsive-s))};
+  --card-padding-bottom: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-left: #{pxToRem(var(--spacing-responsive-s))};
   // @include spacing-responsive-xxs('--card-padding-top');
   // @include spacing-responsive-s('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-bottom');
@@ -145,9 +145,9 @@
 
 @mixin card--xl--tall {
   --card-padding-top: #{pxToRem(var(--spacing-fixed-6x))};
-  --card-padding-right: #{pxToRem(var(--lyne-spacing-responsive-s))};
-  --card-padding-bottom: #{pxToRem(var(--lyne-spacing-responsive-xxs))};
-  --card-padding-left: #{pxToRem(var(--lyne-spacing-responsive-s))};
+  --card-padding-right: #{pxToRem(var(--spacing-responsive-s))};
+  --card-padding-bottom: #{pxToRem(var(--spacing-responsive-xxs))};
+  --card-padding-left: #{pxToRem(var(--spacing-responsive-s))};
   // @include spacing-responsive-s('--card-padding-right');
   // @include spacing-responsive-xxs('--card-padding-bottom');
   // @include spacing-responsive-s('--card-padding-left');
@@ -155,10 +155,10 @@
 }
 
 @mixin card--xxl {
-  --card-padding-top: #{pxToRem(var(--lyne-spacing-responsive-s))};
-  --card-padding-right: #{pxToRem(var(--lyne-spacing-responsive-s))};
-  --card-padding-bottom: #{pxToRem(var(--lyne-spacing-responsive-s))};
-  --card-padding-left: #{pxToRem(var(--lyne-spacing-responsive-s))};
+  --card-padding-top: #{pxToRem(var(--spacing-responsive-s))};
+  --card-padding-right: #{pxToRem(var(--spacing-responsive-s))};
+  --card-padding-bottom: #{pxToRem(var(--spacing-responsive-s))};
+  --card-padding-left: #{pxToRem(var(--spacing-responsive-s))};
   // @include spacing-responsive-s('--card-padding-top');
   // @include spacing-responsive-s('--card-padding-right');
   // @include spacing-responsive-s('--card-padding-bottom');
