--- a/src/components/lyne-footer/styles/lyne-footer.component.scss
+++ b/src/components/lyne-footer/styles/lyne-footer.component.scss
@@ -5,16 +5,16 @@
 
 :host {
   // Reminder: --footer-gap-horizontal needs a new responsive gap design token
-  // var(--lyne-spacing-responsive-s); is just a placeholder for now
-  --footer-gap-horizontal: var(--lyne-spacing-responsive-s);
-  --footer-gap-vertical: var(--lyne-spacing-responsive-l);
+  // var(--spacing-responsive-s); is just a placeholder for now
+  --footer-gap-horizontal: var(--spacing-responsive-s);
+  --footer-gap-vertical: var(--spacing-responsive-l);
 }
 
 .footer {
   @include page-spacing;
-  margin-block-start: pxToRem(var(--lyne-spacing-responsive-l));
-  padding-block-start: pxToRem(var(--lyne-spacing-responsive-l));
-  padding-block-end: pxToRem(var(--lyne-spacing-responsive-l));
+  margin-block-start: pxToRem(var(--spacing-responsive-l));
+  padding-block-start: pxToRem(var(--spacing-responsive-l));
+  padding-block-end: pxToRem(var(--spacing-responsive-l));
 }
 
 .footer--primary {
@@ -74,7 +74,7 @@
 }
 
 * + .bottom {
-  margin-block-start: pxToRem(var(--lyne-spacing-responsive-xl));
+  margin-block-start: pxToRem(var(--spacing-responsive-xl));
   border-block-start: 1px solid var(--color-cloud-default);
   padding-block-start: pxToRem(var(--spacing-fixed-8x));
 }
