--- a/src/global/core/shared/variables.scss
+++ b/src/global/core/shared/variables.scss
@@ -46,42 +46,42 @@
   //////////////////////////////////////////////////////////////////////////////
   ///
   /// Responsive spacing
-  --lyne-spacing-responsive-xxxs: var(--spacing-responsive-xxxs-zero);
-  --lyne-spacing-responsive-xxs:  var(--spacing-responsive-xxs-zero);
-  --lyne-spacing-responsive-xs:   var(--spacing-responsive-xs-zero);
-  --lyne-spacing-responsive-s:    var(--spacing-responsive-s-zero);
-  --lyne-spacing-responsive-m:    var(--spacing-responsive-m-zero);
-  --lyne-spacing-responsive-l:    var(--spacing-responsive-l-zero);
-  --lyne-spacing-responsive-xl:   var(--spacing-responsive-xl-zero);
-  --lyne-spacing-responsive-xxl:  var(--spacing-responsive-xxl-zero);
+  --spacing-responsive-xxxs: var(--spacing-responsive-xxxs-zero);
+  --spacing-responsive-xxs:  var(--spacing-responsive-xxs-zero);
+  --spacing-responsive-xs:   var(--spacing-responsive-xs-zero);
+  --spacing-responsive-s:    var(--spacing-responsive-s-zero);
+  --spacing-responsive-m:    var(--spacing-responsive-m-zero);
+  --spacing-responsive-l:    var(--spacing-responsive-l-zero);
+  --spacing-responsive-xl:   var(--spacing-responsive-xl-zero);
+  --spacing-responsive-xxl:  var(--spacing-responsive-xxl-zero);
 
   @include mq($from: small) {
-    --lyne-spacing-responsive-l:    var(--spacing-responsive-l-small);
-    --lyne-spacing-responsive-xl:   var(--spacing-responsive-xl-small);
-    --lyne-spacing-responsive-xxl:  var(--spacing-responsive-xxl-small);
+    --spacing-responsive-l:    var(--spacing-responsive-l-small);
+    --spacing-responsive-xl:   var(--spacing-responsive-xl-small);
+    --spacing-responsive-xxl:  var(--spacing-responsive-xxl-small);
   }
   @include mq($from: medium) {
-    --lyne-spacing-responsive-xxxs: var(--spacing-responsive-xxxs-medium);
-    --lyne-spacing-responsive-xxs:  var(--spacing-responsive-xxs-medium);
-    --lyne-spacing-responsive-xs:   var(--spacing-responsive-xs-medium);
-    --lyne-spacing-responsive-s:    var(--spacing-responsive-s-medium);
-    --lyne-spacing-responsive-m:    var(--spacing-responsive-m-medium);
-    --lyne-spacing-responsive-l:    var(--spacing-responsive-l-medium);
-    --lyne-spacing-responsive-xl:   var(--spacing-responsive-xl-medium);
-    --lyne-spacing-responsive-xxl:  var(--spacing-responsive-xxl-medium);
+    --spacing-responsive-xxxs: var(--spacing-responsive-xxxs-medium);
+    --spacing-responsive-xxs:  var(--spacing-responsive-xxs-medium);
+    --spacing-responsive-xs:   var(--spacing-responsive-xs-medium);
+    --spacing-responsive-s:    var(--spacing-responsive-s-medium);
+    --spacing-responsive-m:    var(--spacing-responsive-m-medium);
+    --spacing-responsive-l:    var(--spacing-responsive-l-medium);
+    --spacing-responsive-xl:   var(--spacing-responsive-xl-medium);
+    --spacing-responsive-xxl:  var(--spacing-responsive-xxl-medium);
   }
   @include mq($from: large) {
-    --lyne-spacing-responsive-l:    var(--spacing-responsive-l-large);
-    --lyne-spacing-responsive-xl:   var(--spacing-responsive-xl-large);
-    --lyne-spacing-responsive-xxl:  var(--spacing-responsive-xxl-large);
+    --spacing-responsive-l:    var(--spacing-responsive-l-large);
+    --spacing-responsive-xl:   var(--spacing-responsive-xl-large);
+    --spacing-responsive-xxl:  var(--spacing-responsive-xxl-large);
   }
   @include mq($from: wide) {
-    --lyne-spacing-responsive-m:    var(--spacing-responsive-m-wide);
+    --spacing-responsive-m:    var(--spacing-responsive-m-wide);
 
   }
   @include mq($from: ultra) {
-    --lyne-spacing-responsive-l:    var(--spacing-responsive-l-ultra);
-    --lyne-spacing-responsive-xl:   var(--spacing-responsive-xl-ultra);
-    --lyne-spacing-responsive-xxl:  var(--spacing-responsive-xxl-ultra);
+    --spacing-responsive-l:    var(--spacing-responsive-l-ultra);
+    --spacing-responsive-xl:   var(--spacing-responsive-xl-ultra);
+    --spacing-responsive-xxl:  var(--spacing-responsive-xxl-ultra);
   }
 }
