feat: logical properties for clock column

--- a/src/components/lyne-footer/styles/lyne-footer.component.scss
+++ b/src/components/lyne-footer/styles/lyne-footer.component.scss
@@ -64,7 +64,7 @@
       order: initial;
     }
     @include mq($from: wide) {
-      margin-left: auto;
+      margin-inline-start: auto;
     }
   }
 }
