--- a/src/global/mixins/mixins_typo.scss
+++ b/src/global/mixins/mixins_typo.scss
@@ -43,7 +43,7 @@
 }
 
 @mixin title--negative {
-  color: var(--color-storm-default);
+  --_title-text-color-normal: var(--color-storm-default);
 }
 
 // ----------------------------------------------------------------------------------------------------
