--- a/src/components/lyne-footer/styles/lyne-footer.component.scss
+++ b/src/components/lyne-footer/styles/lyne-footer.component.scss
@@ -8,6 +8,9 @@
   // var(--spacing-responsive-s); is just a placeholder for now
   --footer-gap-horizontal: var(--spacing-responsive-s);
   --footer-gap-vertical: var(--spacing-responsive-l);
+
+  // Contextual design for lyne-stack
+  --stack-text-color-normal: var(--color-metal-default);
 }
 
 .footer {
@@ -22,11 +25,8 @@
 }
 
 .footer--primary-negative {
+  --title-text-color-normal: var(--color-storm-default);
   color: white;
-}
-
-.title--visually-hidden {
-  @include screenReaderOnly();
 }
 
 .columns {
@@ -43,15 +43,18 @@
 
   ::slotted( [slot] ) {
     flex-basis: 100%;
+    // Debugging helper
     //border: 1px solid var(--color-cloud-default);
 
     @include mq($from: small) {
-      flex: 0 0 calc(50% - (#{pxToRem(var(--footer-gap-horizontal))}/2));
+      // Debugging helper: Swap flex definitions
       //flex: 0 0 calc(50% - (#{pxToRem(var(--footer-gap-horizontal))}/2) - 2px);
+      flex: 0 0 calc(50% - (#{pxToRem(var(--footer-gap-horizontal))}/2));
     }
     @include mq($from: wide) {
-      flex: 0 0 calc(25% - ((3*#{pxToRem(var(--footer-gap-horizontal))})/4));
+      // Debugging helper: Swap flex definitions
       //flex: 0 0 calc(25% - ((3*#{pxToRem(var(--footer-gap-horizontal))})/4) - 2px);
+      flex: 0 0 calc(25% - ((3*#{pxToRem(var(--footer-gap-horizontal))})/4));
     }
   }
   ::slotted( [slot='clock']) {
@@ -73,8 +76,10 @@
   @include page-spacing__inner;
 }
 
-// Only apply spacing and line if footer bottom has a predecessor, excluding
-// the hidden title which always needs to be there
+// Increase lyne-footer resilience
+//
+// Only apply spacing and thin line if footer bottom has a predecessor, excluding
+// the hidden title which always needs to be present
 :not(.title--visually-hidden) + .bottom {
   margin-block-start: pxToRem(var(--spacing-responsive-xl));
   border-block-start: 1px solid var(--color-cloud-default);
