--- a/src/components/lyne-journey-header/styles/lyne-journey-header.component.scss
+++ b/src/components/lyne-journey-header/styles/lyne-journey-header.component.scss
@@ -4,7 +4,8 @@
 @include host-component-properties;
 
 :host {
-  --icon-spacing-inset: var(--spacing-fixed-1x);
+  --_icon-spacing-inset: var(--spacing-fixed-1x);
+  --_title-text-color-normal: var(--title-text-color-normal, var(--color-charcoal-default));
 }
 
 .journey-header[id] {
@@ -19,6 +20,7 @@
   justify-content: space-between;
   align-items: center;
   width: fit-content;
+  color: var(--_title-text-color-normal);
 
   // Right to left expression
   &[dir="rtl"] {
@@ -49,7 +51,7 @@
 .icon {
   display: flex;
   align-items: center;
-  padding-inline: pxToRem(var(--icon-spacing-inset));
+  padding-inline: pxToRem(var(--_icon-spacing-inset));
 
   svg {
     fill: currentColor;
