feat: introduce footer theming

--- a/src/components/lyne-footer/styles/lyne-footer.component.scss
+++ b/src/components/lyne-footer/styles/lyne-footer.component.scss
@@ -4,10 +4,13 @@
 @include host-component-properties;
 
 :host {
-  // Reminder: --footer-gap-horizontal needs a new responsive gap design token
+  // Reminder: --_footer-gap-horizontal needs a new responsive gap design token
   // var(--spacing-responsive-s); is just a placeholder for now
-  --footer-gap-horizontal: var(--spacing-responsive-s);
-  --footer-gap-vertical: var(--spacing-responsive-l);
+  --_footer-gap-horizontal: var(--footer-gap-horizontal, var(--spacing-responsive-s));
+  --_footer-gap-vertical: var(--footer-gap-vertical, var(--spacing-responsive-l));
+  --_footer-background-color: var(--footer-background-color, var(--color-milk-default));
+  --_footer-divider-color: var(--footer-divider-color, var(--color-cloud-default));
+  --_footer-divider-thickness: var(--footer-divider-thickness, 1px);
 
   // Contextual design for lyne-stack
   --stack-text-color-normal: var(--color-metal-default);
@@ -18,15 +21,13 @@
   margin-block-start: pxToRem(var(--spacing-responsive-l));
   padding-block-start: pxToRem(var(--spacing-responsive-l));
   padding-block-end: pxToRem(var(--spacing-responsive-l));
-}
-
-.footer--primary {
-  background-color: var(--color-milk-default);
+  background-color: var(--_footer-background-color);
 }
 
 .footer--primary-negative {
+  --_footer-divider-color: var(--color-iron-default);
+  --_footer-background-color: var(--color-charcoal-default);
   --title-text-color-normal: var(--color-storm-default);
-  color: white;
 }
 
 .columns {
@@ -38,8 +39,8 @@
   @include page-spacing__inner;
   display: flex;
   flex-wrap: wrap;
-  column-gap: pxToRem(var(--footer-gap-horizontal));
-  row-gap: pxToRem(var(--footer-gap-vertical));
+  column-gap: pxToRem(var(--_footer-gap-horizontal));
+  row-gap: pxToRem(var(--_footer-gap-vertical));
 
   ::slotted( [slot] ) {
     flex-basis: 100%;
@@ -48,13 +49,13 @@
 
     @include mq($from: small) {
       // Debugging helper: Swap flex definitions
-      //flex: 0 0 calc(50% - (#{pxToRem(var(--footer-gap-horizontal))}/2) - 2px);
-      flex: 0 0 calc(50% - (#{pxToRem(var(--footer-gap-horizontal))}/2));
+      //flex: 0 0 calc(50% - (#{pxToRem(var(--_footer-gap-horizontal))}/2) - 2px);
+      flex: 0 0 calc(50% - (#{pxToRem(var(--_footer-gap-horizontal))}/2));
     }
     @include mq($from: wide) {
       // Debugging helper: Swap flex definitions
-      //flex: 0 0 calc(25% - ((3*#{pxToRem(var(--footer-gap-horizontal))})/4) - 2px);
-      flex: 0 0 calc(25% - ((3*#{pxToRem(var(--footer-gap-horizontal))})/4));
+      //flex: 0 0 calc(25% - ((3*#{pxToRem(var(--_footer-gap-horizontal))})/4) - 2px);
+      flex: 0 0 calc(25% - ((3*#{pxToRem(var(--_footer-gap-horizontal))})/4));
     }
   }
   ::slotted( [slot='clock']) {
@@ -82,6 +83,6 @@
 // the hidden title which always needs to be present
 :not(.title--visually-hidden) + .bottom {
   margin-block-start: pxToRem(var(--spacing-responsive-xl));
-  border-block-start: 1px solid var(--color-cloud-default);
+  border-block-start: var(--_footer-divider-thickness) solid var(--_footer-divider-color);
   padding-block-start: pxToRem(var(--spacing-fixed-8x));
 }
