--- a/src/global/core/shared/normalize.scss
+++ b/src/global/core/shared/normalize.scss
@@ -20,6 +20,8 @@ Use a better box model (opinionated).
 html {
   // line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  -moz-text-size-adjust: 100%; /* 2 */
+  text-size-adjust: 100%; /* 2 */
   -moz-tab-size: 4; /* 3 */
   tab-size: 4; /* 3 */
 }
