--- a/src/components/lyne-link-list/styles/lyne-link-list.component.scss
+++ b/src/components/lyne-link-list/styles/lyne-link-list.component.scss
@@ -15,17 +15,32 @@ lyne-title {
   @include listReset();
 }
 
-.link-list--horizontal {
+@mixin link-list--horizontal {
   display: flex;
   flex-wrap: wrap;
   column-gap: pxToRem(var(--spacing-fixed-8x));
 }
 
+.link-list--horizontal {
+  @include link-list--horizontal;
+}
+
+.link-list--horizontal-from-large {
+  @include mq($from: large) {
+    @include link-list--horizontal;
+  }
+}
+
 ::slotted(.link-list__item:not(:last-child)) {
   margin-block-end: pxToRem(var(--spacing-fixed-3x));
 }
-// Needs to be after the ::slotted(.link-list__item:not(:last-child))
+// Need to be after the ::slotted(.link-list__item:not(:last-child))
 // selector due to specificity
 .link-list--horizontal ::slotted(.link-list__item) {
   margin-block-end: unset;
+}
+.link-list--horizontal-from-large ::slotted(.link-list__item) {
+  @include mq($from: large) {
+    margin-block-end: unset;
+  }
 }
