--- a/src/global/mixins/mixins_spacing.scss
+++ b/src/global/mixins/mixins_spacing.scss
@@ -36,6 +36,9 @@
   }
 }
 
+
+// Kept on purpose / purposely commented out
+//
 // /// Mixin to retrieve spacing values for the given breakpoints.
 // ///
 // /// @param {Map} $rsp-space-map [default value] - Map of breakpoints and corresponding spacing values.
