--- a/src/global/mixins/mixins_spacing.scss
+++ b/src/global/mixins/mixins_spacing.scss
@@ -31,8 +31,8 @@
 @mixin page-spacing__inner() {
   @include mq($from: ultra--max-content) {
     width: pxToRem($breakpoint-ultra-min);
-    margin-left: auto;
-    margin-right: auto;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
   }
 }
 
