--- a/src/components/lyne-stack/styles/lyne-stack.component.scss
+++ b/src/components/lyne-stack/styles/lyne-stack.component.scss
@@ -13,7 +13,7 @@
   margin: 0;
   padding: 0;
   display: block;
-  width: fit-content;
+  //width: fit-content;
 }
 
 // Reset all slotted elements
